added directory finder (placeholder for mkdir, mag file handling na lang tayo kesa sql)
Signed-off-by: Augustin <augustindelapena1904@gmail.com>

--- a/4Ps-financial-tracker/4Ps-financial-tracker.vcxproj
+++ b/4Ps-financial-tracker/4Ps-financial-tracker.vcxproj
@@ -60,6 +60,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="directoryFinder.cpp" />
     <ClCompile Include="familyRegistration.cpp" />
     <ClCompile Include="familySearch.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -67,6 +68,7 @@
     <ClCompile Include="ratingCalculator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="directoryFinder.h" />
     <ClInclude Include="ratingCalculator.h" />
     <ClInclude Include="userInterface.h" />
   </ItemGroup>
