--- a/4Ps-financial-tracker/4Ps-financial-tracker.vcxproj.filters
+++ b/4Ps-financial-tracker/4Ps-financial-tracker.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="familySearch.cpp">
       <Filter>Source Files\frontEnd</Filter>
     </ClCompile>
+    <ClCompile Include="directoryFinder.cpp">
+      <Filter>Source Files\backEnd</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ratingCalculator.h">
@@ -49,6 +52,9 @@
     </ClInclude>
     <ClInclude Include="userInterface.h">
       <Filter>Header Files\frontEndH</Filter>
+    </ClInclude>
+    <ClInclude Include="directoryFinder.h">
+      <Filter>Header Files\backEndH</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
